SUBDIRS = src doc
EXTRA_DIST = include/AussieLottoGUI.h include/DrawHistoryManagerGUI.h include/AussieLotto.h  include/defs.h  include/LottoGame.h  include/MersenneTwister.h  include/types.h aussielotto.spec dist/aussielotto.desktop dist/aussielotto.png include/ExceptionHandler.h include/AussieLottoException.h include/ResultDownloader.h include/date.h /include/DrawHistoryManager.h

desktopdir=$(datadir)/applications
desktop_DATA = dist/aussielotto.desktop

icondir=$(datadir)/icons/hicolor/64x64/apps
icon_DATA = dist/aussielotto.png
